# knights-ubc-hockey

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
common/: __init__.py  config.py
config/: ingestion.yml
public/seasons/2023-24/: games.csv  goalies.csv  playoffs-games.csv  playoffs-goalies.csv  playoffs-recaps.json  playoffs-skaters.csv  recaps.json  skaters.csv
public/seasons/2024-25/: games.csv  goalies.csv  playoffs-games.csv  playoffs-goalies.csv  playoffs-recaps.json  playoffs-skaters.csv  recaps.json  skaters.csv
public/seasons/2025-26/: awards.json  games.csv  goalies.csv  playoffs-games.csv  playoffs-goalies.csv  playoffs-recaps.json  playoffs-skaters.csv  recaps.json  skaters.csv  tournaments-games.csv  tournaments-goalies.csv  tournaments-recaps.json  tournaments-skaters.csv
scripts/: ingestion.py  pointstreak_scraper.py
src/: App.jsx
